# rotation-koo-lab

./: .gitignore  README.md  deepbind-with-synthetic-data.ipynb  deepsea-with-synthetic-data.ipynb  setup.cfg  setup.py
chip-seq-to-hdf5-dataset/: chip-seq-to-hdf5-dataset.ipynb  chipseq_utils.py  setup.py
docs/: api.rst  conf.py  index.rst
docs/api/: chipseq_utils.chipseq_utils.rst  chipseq_utils.rst
docs/user_guide/: chip-seq-to-hdf5-dataset.ipynb  index.rst
git-github-tutorial/: index.html  slides.md
representation-learning/: 01-representation-learning.ipynb  deepsea-with-synthetic-data.ipynb
