[metadata]
author = Jakub Kaczmarzyk
author_email = kaczmar@cshl.edu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
description = Utilities for ChIP-seq analysis

[options]
python_requires = >=3.6,<4
install_requires =
    h5py
    matplotlib
    numpy
    pandas
    scipy
packages = find:

[options.extras_require]
dev =
    black
    flake8
    mypy
    pytest
    pytest-cov
doc =
    ipython
    pydata-sphinx-theme
    nbsphinx
    numpydoc
    sphinx
    sphinxcontrib-apidoc
